--- a/css/style.css
+++ b/css/style.css
@@ -1396,8 +1396,7 @@ blockquote {
 .client-overlay {
     background: rgba(0, 0, 0, 0.8);
     position: absolute;
-    top;
-    0;
+    top: 0;
     right: 0;
     bottom: 0;
     left: 0;
@@ -2327,6 +2326,14 @@ blockquote {
 
 }
 
+#mc-video {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
 
-
-
+  .video-size {
+    width: 600px;
+    height: 450px;
+  }
